# etl-tool

./: .gitignore  README.md  db.py  def.txt  etl.stage.json  extract.py  fdeps.py  fdeps.txt  load.py  main.py  pyproject.toml  run.py  setup.sh  test.py  transform.py  urls.json
schemas/: gold.sql  silver.sql
scrapper/: fetch.py
